fixed background styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@ h1 {
 }
 
 h2 {
+  display: flex;
   text-align: center;
+  justify-content: center;
 }
 
 h5 {
